Fixed layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -326,7 +326,7 @@ a:visited {
   color: var(--button-text-color)
 }
 
-@media all and (max-width: 400px) {
+@media all and (min-width: 300px) {
   .App {
     width: 19rem;
   }
@@ -345,9 +345,10 @@ a:visited {
   }
 }
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 301px) {
   .App {
-    width: 35rem;
+    width: 90%;
+    margin: 0 auto;
   }
 
   .charts-container-expanded {
@@ -360,7 +361,7 @@ a:visited {
   }
 
   .search-container>div {
-    justify-content: right;
+    justify-content: center;
   }
 }
 
